--- a/JPA Joins/pom.xml
+++ b/JPA Joins/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.3.0.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example.jpa-beans4</groupId>
-	<artifactId>demo-jpa-beans4</artifactId>
+	<groupId>com.example.demo-jpa4</groupId>
+	<artifactId>demo-jpa4</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo-jpa-beans4</name>
+	<name>demo-jpa4</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -21,13 +21,17 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>6.0.0.Beta2</version>
-			<type>pom</type>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
