--- a/JPA Joins/src/main/resources/application.properties
+++ b/JPA Joins/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/books
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+
+
+
+spring.jpa.hibernate.ddl-auto=create
