--- a/Spring Mongo/pom.xml
+++ b/Spring Mongo/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.3.0.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example.jpa-beans4</groupId>
-	<artifactId>demo-jpa-beans4</artifactId>
+	<groupId>com.example.spring-mongo4</groupId>
+	<artifactId>demo-mongo4</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo-jpa-beans4</name>
+	<name>demo-mongo4</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -21,14 +21,13 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>6.0.0.Beta2</version>
-			<type>pom</type>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
